fix event background bug and remove contact page extra space

--- a/themes/karakata/sass/_page-contact.scss
+++ b/themes/karakata/sass/_page-contact.scss
@@ -17,7 +17,10 @@ html{
     @include desktop{
     background-image: linear-gradient(180deg,rgb(0, 0, 0),#857b76);
     display: grid;
-    padding-top: 12vw;
+    min-height: 100vh;
+    padding-bottom: 0;
+    margin: 0;
+    padding-top: 7vw;
 
     grid-template-columns: 1.2fr 1fr;
     }
