--- a/themes/karakata/sass/_page-events.scss
+++ b/themes/karakata/sass/_page-events.scss
@@ -58,9 +58,8 @@
     padding-bottom: 90px;
     @include desktop{
     background-image: url('../../Icons/events_BG.png'); 
-        margin-top: -80px;
         padding-bottom:0px;
-        padding-top:150px ;
+        padding-top:70px ;
     }
 }
 .event-content{
